fixing paper alignment

--- a/src/client/css/puzzles/language_scramble.less
+++ b/src/client/css/puzzles/language_scramble.less
@@ -96,20 +96,20 @@ body {
             display: inline-block;
             position: absolute;
             top: 0;
-            .background_size(34px);
-            width: 34px;
+            .background_size(35px);
+            width: 35px;
         }
         
         &::before {
             background-image:url('/assets/images/puzzles/language_scramble/paper-left.png');
             background-position: left 6px;
-            left: -34px;
+            left: -35px;
         }
 
         &::after {
             background-image:url('/assets/images/puzzles/language_scramble/paper-right.png');
             background-position: right 6px;
-            right: -34px;
+            right: -35px;
         }
     }
     
@@ -232,11 +232,11 @@ body {
                 }              
                 
                 &::before {
-                    left: -20px;
+                    left: -21px;
                 }
                 
                 &::after {
-                    right: -20px;
+                    right: -21px;
                 }
             }
         }
